# vkmana-app-template

./: .clang-format  .gitignore  CMakeLists.txt  Dependencies.cmake
src/: main.cpp
